# django-probes

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yml  publish.yml  test.yml
django_probes/: __init__.py
django_probes/management/commands/: wait_for_database.py
probes/: __init__.py
probes/management/commands/: wait_for_database.py
tests/smoke/: test_smoke.py
tests/test_project/: settings.py  wsgi.py
tests/testproject/: settings.py  wsgi.py
tests/unit/: test_cli.py
