[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80"]

[project]
name = "django-probes"
dynamic = ["version"]
description = "Make Django wait until database is ready. Probes for Docker and Kubernetes."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Bashar Said", email = "bashar.said@vshn.ch"},
    {name = "d9pouces", email = "github@19pouces.net"},
    {name = "Jorrit", email = "jorrit@wehelpen.nl"},
    {name = "Peter Bittner", email = "django@bittner.it"},
    {name = "sambasan", email = "sambasan@users.noreply.github.com"},
    {name = "Siming Yuan", email = "siyuan@cisco.com"},
    {name = "Simon Rüegg", email = "simon.ruegg@vshn.ch"},
]
maintainers = [
    {name = "Peter Bittner", email = "django@bittner.it"},
]
keywords=[
    "containers",
    "django",
    "database",
    "probes",
    "docker",
    "kubernetes",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/painless-software/django-probes"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
source = ["django_probes"]

[tool.pytest.ini_options]
addopts = "--color=yes --verbose"
DJANGO_SETTINGS_MODULE = "testproject.settings"
python_files = ["tests.py","test_*.py","*_tests.py"]
pythonpath = ["tests"]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = ["ANN", "D", "EM101", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"tests/testproject/settings.py" = ["S105"]
"tests/unit/test_cli.py" = ["INP001", "PTH208"]
"django_probes/management/commands/wait_for_database.py" = ["ARG002", "RUF012", "T201", "TRY301"]

[tool.setuptools]
packages = [
    "django_probes",
    "django_probes.management",
    "django_probes.management.commands",
]

[tool.setuptools.dynamic]
version = {attr = "django_probes.__version__"}
